--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,9 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+# PyPI
+.pypirc
+
 # Cython debug symbols
 cython_debug/
 
@@ -161,3 +164,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 bark_cpp/lib
+
+# VSCode
+.vscode
